--- a/css/components/_components.header.scss
+++ b/css/components/_components.header.scss
@@ -47,9 +47,7 @@
     }
 
     &__game {
-        position: static;
         justify-content: flex-start;
-        margin-bottom: 10px;
         padding: 0 12%;
     }
 
@@ -64,8 +62,5 @@
             padding: 0;
         }
 
-        &__game {
-            justify-content: flex-start;
-        }
     }
 }
